--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,14 +1,59 @@
-
-
 .wrapper {
   display: flex;
-}
-.avatar-side {
+  }
+  .avatar-side {
   background-color: #7ca9e4;
   width: 500px;
   height: 100vh;
-}
-.reviews-side {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  }
+  .reviews-side {
   background-color: #e0edd9;
   width: calc(100vw - 500px);
-}
+  }
+  
+  .filv_status {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+  }
+  
+  .yuusya_image {
+  margin-top: 30px;
+  }
+  
+  .google-btn {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  border: 2px solid #333;
+  }
+  
+  .status__title {
+  margin-top: 30px;
+  font-size: 20px;
+  font-weight: bold;
+  }
+  
+  .reviews {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+  }
+  
+  .reviews__title {
+  font-size: 30px;
+  font-weight: bold;
+  }
+  
+  .reviews__message {
+  font-size: 20px;
+  font-style: italic;
+  }
