--- a/app/views/filvs/_reviews.html.erb
+++ b/app/views/filvs/_reviews.html.erb
@@ -1,1 +1,4 @@
-yattaze
+<div class="reviews">
+  <h2 class="reviews__title">Reviews</h2>
+  <p class="reviews__message">No reviews yet.</p>
+</div>
