とりあえずのトップ

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,13 +11,30 @@
 
   <body>
 
-   <header class="header">
-<div class="header__bar">
-  <h1 class="main-title"><a href="/">FIlVerse</a></h1>
-  <div class="top-batton">
-   <a class="my-page" href="/">投稿する</a>
-  </div>
-</div>
+  <header class="header">
+
+   <div class="header__bar">
+
+    <h1 class="main-title"><a href="/">FIlVerse</a></h1>
+
+    <div class="top-button">
+
+     <div class="button">
+      <a class="my-page" href="/">マイページ</a>
+     </div>
+
+     <div class="button">
+      <a class="logout" href="/">ログアウト</a>
+     </div>
+
+     <div class="button">
+      <a class="my-page" href="/">映画検索</a>
+     </div>
+
+    </div>
+
+   </header>
+
 
 
   <%= yield %>
