--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,4 +1,76 @@
-.wrapper {
+header {
+  background-color: rgb(161, 232, 210);
+  padding: 20px;
+  text-align: center;
+}
+
+header h1 {
+  font-family: Arial, sans-serif;
+  font-size: 36px;
+  color: #fff;
+  text-shadow: 1px 1px #000;
+  margin: 0;
+}
+
+header a {
+  color: #fff;
+  text-decoration: none;
+}
+
+header button {
+  background-color: #fff;
+  color: #333;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 2px 2px #333;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+.header__bar {
+  display: flex;
+  align-items: center;
+  }
+  
+  .main-title {
+  margin: 0;
+  font-size: 36px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #fff;
+  }
+  
+  .top-button {
+    display: flex;
+    justify-content: flex-end;
+    margin-left: auto;
+  }
+  
+
+  
+  
+  .my-page,
+  .logout {
+  background-color: #fff;
+  color: #5f5f5f;
+  padding: 10px 20px;
+  border-radius: 25px;
+  text-decoration: none;
+  font-size: 16px;
+  }
+  
+  footer {
+  background-color: #5f5f5f;
+  color: #fff;
+  text-align: center;
+  padding: 20px;
+  }
+  
+  /* 既存のCSS */
+  .wrapper {
   display: flex;
   }
   .avatar-side {
@@ -9,10 +81,12 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 50px;
   }
   .reviews-side {
   background-color: #e0edd9;
   width: calc(100vw - 500px);
+  padding: 50px;
   }
   
   .filv_status {
@@ -20,7 +94,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 50px;
   }
   
   .yuusya_image {
@@ -31,29 +104,31 @@
   width: 250px;
   height: 250px;
   border-radius: 50%;
-  border: 2px solid #333;
+  border: 1px solid black;
   }
   
-  .status__title {
+  .status {
   margin-top: 30px;
   font-size: 20px;
   font-weight: bold;
+  text-align: center;
+  }
+  
+  .status__title {
+  margin-bottom: 20px;
   }
   
   .reviews {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-top: 50px;
+  text-align: center;
   }
   
   .reviews__title {
-  font-size: 30px;
+  margin: 0;
+  font-size: 36px;
   font-weight: bold;
   }
   
   .reviews__message {
+  margin-top: 20px;
   font-size: 20px;
-  font-style: italic;
   }
