--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
 
   <header class="header">
 
-   <div class="header__bar">
+   <div class="header_bar">
 
-    <h1 class="main-title"><a href="/">FIlVerse</a></h1>
+    <h1 ><a class="main_title" href="/">FIlVerse</a></h1>
 
     <div class="top-button">
 
@@ -28,7 +28,7 @@
      </div>
 
      <div class="button">
-      <a class="my-page" href="/">映画検索</a>
+      <a class="movie-search" href="/">映画検索</a>
      </div>
 
     </div>
