--- a/app/views/filvs/_avatar.html.erb
+++ b/app/views/filvs/_avatar.html.erb
@@ -3,7 +3,7 @@
     <img src="<%= @filv.avatar_image %>">
     
     <div class="yuusya_image">
-     <%= link_to image_tag("yuusya.png", size:"250x250", class:"google-btn"), "#" %>
+     <%= link_to image_tag("yuusya.png", size:"250x250" ), "#" %>
     </div> 
 
     <div class="status">
