--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -60,7 +60,7 @@ header h1 {
   display: flex;
   }
   .avatar-side {
-  background-color: #e2e6ec;
+  background-color: #dbdffc;
   width: 500px;
   height: 100vh;
   display: flex;
@@ -76,27 +76,39 @@ header h1 {
   }
   
   .filv_status {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    }
   
   .yuusya_image {
   margin-top: 30px;
   }
   
   .status {
-  margin-top: 30px;
-  font-size: 20px;
-  font-weight: bold;
-  text-align: center;
-  }
+    margin-top: 30px;
+font-size: 20px;
+font-weight: normal;
+    text-align: center;
+    background-color: #e4e6f2;
+    padding: 20px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px #333;
+    }
   
-  .status__title {
-  margin-bottom: 20px;
-  }
-  
+    .status__title {
+      margin-bottom: 10px;
+      text-indent: 10px;
+      font-size: 18px;
+      font-style: italic;
+      }
+      
+      .status__value {
+      font-size: 30px;
+      color: #333;
+      }
+
   .reviews {
   text-align: center;
   }
@@ -111,3 +123,5 @@ header h1 {
   margin-top: 20px;
   font-size: 20px;
   }
+
+  
